# BPAIBridge_skim

./: 01_check_environment.bat  02_install.bat  03_setup_mcp.bat  CLAUDE_CODE_CLI_INSTALL.md  LICENSE  README.md  [TEST]_manual_server_start.bat  [UTIL]_download_wheels.bat
ue_plugin/BPAIBridge/: BPAIBridge.uplugin
ue_plugin/BPAIBridge/Config/: BlueprintTypeMappings.json
ue_plugin/BPAIBridge/Source/BPAIBridge/: BPAIBridge.Build.cs
ue_plugin/BPAIBridge/Source/BPAIBridge/Private/: BPAIBridgeModule.cpp
ue_plugin/BPAIBridge/Source/BPAIBridge/Private/AnimBlueprint/: AnimBlueprintUtils.cpp
ue_plugin/BPAIBridge/Source/BPAIBridge/Private/Blueprint/: BlueprintUtils.cpp  Blueprint_Analyze.cpp  Blueprint_Function.cpp  Blueprint_Graph.cpp  Blueprint_Variable.cpp
ue_plugin/BPAIBridge/Source/BPAIBridge/Private/MCP/: BPAIBridgeMCPAdapter.cpp
ue_plugin/BPAIBridge/Source/BPAIBridge/Private/Material/: MaterialUtils.cpp
ue_plugin/BPAIBridge/Source/BPAIBridge/Public/: BPAIBridgeModule.h
ue_plugin/BPAIBridge/Source/BPAIBridge/Public/AnimBlueprint/: AnimBlueprintUtils.h
ue_plugin/BPAIBridge/Source/BPAIBridge/Public/Blueprint/: BlueprintUtils.h  Blueprint_Analyze.h  Blueprint_Function.h  Blueprint_Graph.h  Blueprint_Variable.h
ue_plugin/BPAIBridge/Source/BPAIBridge/Public/MCP/: BPAIBridgeMCPAdapter.h
ue_plugin/BPAIBridge/Source/BPAIBridge/Public/Material/: MaterialUtils.h
ue_plugin/BPAIBridge/mcp/: pyproject.toml
ue_plugin/BPAIBridge/mcp/src/bpaibridge/: __init__.py  server.py  unreal_connection.py
